# restaurant-recomender

./: .gitignore  Makefile  Readme.md  features.ipynb  procesamiento.ipynb  procesamiento2.ipynb  pyproject.toml  requirements.txt
data/: queries.csv
data/raw/: abando_data.csv  amezola_data.csv  basurto_data.csv  cascoViejo_data.csv  deusto_data.csv  errekalde_data.csv  granVia_data.csv  indautxu_data.csv  laCasilla_data.csv  moyua_data.csv  sanMames_data.csv  santutxu_data.csv
src/: create_db.py  scraper.py  search_query.py  utilis.py  utils.py
src/procesing/: dist.py
src/processing/: classify_reviews.py  dist.py  extract_features.py  price_range.py  process_data.py  vectorize.py
src/ranknet/: dataset.py  model.py  orchestrator.py  sorting.py  train.py  train_data.py
