[tool.poetry]
name = "restaurant-recomender"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
torch = "^2.2.1"
lightning = "^2.2.1"
playwright = "^1.42.0"
nltk = "^3.8.1"
chromadb = "^0.4.24"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
